--- a/personal_website.html
+++ b/personal_website.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang = 'eng'>
     <head>
+        <title> Yeeun Jang </title>
 
     </head>
 
     <body>
 
-        
+
     </body>
 
 
