--- a/personal_website.html
+++ b/personal_website.html
@@ -6,7 +6,17 @@
     </head>
 
     <body>
-
+        <h1> Yeeun Jang </h1>
+        <h2> Education </h2>
+        <ul>
+            <li>Seoul National University of Science and Technology – Seoul, Korea                          Mar. 2017 – Present
+                <br> <em> Undergraduate Student </em>
+                
+                </li>
+        </ul>
+        <h2> Research Experience </h2>
+        <h2> Projects </h2>
+        <h2> Core courses </h2>
 
     </body>
 
