--- a/personal_website.html
+++ b/personal_website.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html lang = 'eng'>
-    <head>
-        <title> Yeeun Jang </title>
+  <head>
+    <title> CV of Yeeun Jang </title>
+      <style>
+      body{
+      display : block;
+      margin : 0px;
+      padding : 0;
+      }
 
-    </head>
+      h1 {
+      font-size : 40px;
+      font-family : Georgia;
+      color : #1A548E;
+      }
+
+      .small_text {
+      font-size : 12px;
+      }
+      h2 {
+      font-family : Georgia;
+      }
+
+      .bold_text {
+
+      }
+    </style>
+</head>
 
     <body>
         <h1> Yeeun Jang </h1>
